[package]
name = "yakuza"
version = "0.0.1"
authors = ["AAIX"]
license-file = "LICENSE"
homepage = "https://aaix.me"
description = "A Remote controlled TCP SYN flood client written in Rust, powered by libpnet forked from https://github.com/JuxhinDB/synner"
repository = "https://github.com/aaix/yakuza"

[dependencies]
pnet = "0.26.0"
pnet_base = "0.26.0"
pnet_datalink = "0.26.0"
pnet_packet = "0.26.0"
pnet_transport = "0.26.0"
rand = "0.3.15"
